--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,9 @@
   "presets": [
     "@babel/preset-react",
     "@babel/preset-env"
-  ] 
+  ],
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    "@babel/plugin-proposal-class-properties",
+  ],
 }
