--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.3.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8"
@@ -82,6 +83,7 @@
     "babel-polyfill": "^6.26.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.1.2",
