--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "faker": "^4.1.0",
+    "i18next": "^17.0.16",
+    "i18next-browser-languagedetector": "^3.0.3",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
     "koa": "^2.7.0",
@@ -64,6 +66,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.13.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
